# RavenNews

./: Cargo.toml  README.md
.github/workflows/: release.yml
.sqlx/: query-30c376202445280ca4fb5a5eb8006320d4943e472475695fc53151735d93e121.json  query-ae98e7016149b6dba1b6119b929cc0615ece8de981613827369f9a9b21b26d04.json  query-c16bb08ca3a0a6f5371418ddca1dcb7c6f1412020f054440d8ad2c1bf9b1eeeb.json  query-c360fcb9c68d7f4b7ab1c4458c96076e8bb4a82a01b70938706b034a376cfffd.json
migrations/: 100_create_warehouse_schema.sql  V010_create_warehouse_schema.sql
src/: error.rs  lib.rs  main.rs
src/db/: mod.rs  stats.rs
src/ingest/: mod.rs
src/rss/: bloomberg.rs  coindesk.rs  mod.rs  reuters.rs  seeking_alpha.rs
src/x/: mod.rs
tests/: insert_process.rs
tests/data/: bloomberg_test.xml
