[package]
name = "raven-news"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "rustls-tls", "blocking"] }
rss = "2.0.12"
chrono = {  version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "macros"] }
quick-xml = "0.38.4"
dotenvy = "0.15.7"
sha2 = "0.10.9"
clap = { version = "4.5.51", features = ["derive"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
thiserror = "2.0.17"

[dev-dependencies]
dotenvy = "0.15.7"

[package.metadata.sqlx]
offline = true